--- a/basecom/templates/basecom/base.html
+++ b/basecom/templates/basecom/base.html
@@ -59,6 +59,7 @@ html, body {
 <div class="basefix"></div>
 {% include 'basecom/parts/loading2.html'%}
 {% include 'basecom/parts/back2home.html'%}
+{% include 'basecom/parts/hidparts.html'%}
 
 {% if host == "127.0.0.1:8000" or "192.168.1." in host %}
 <div class="rmdmin"></div>
