--- a/basecom/templates/basecom/home.html
+++ b/basecom/templates/basecom/home.html
@@ -328,7 +328,7 @@ style="position:relative;transition: opacity 0.8s 0.6s ease-out, transform 0.8s 
 <div style="position:relative;width:100vw;padding:100px 0px; ">
 <div style="max-width: 1000px; margin: 0 auto;line-height: 1.6; padding: 10px;">
 
-  <h1 class="aaaa element fadeelem" style="font-size: 28px; color: #ddd;">かんたんウェブサイト制作パッケージ</h1>
+ <h1 class="aaaa element fadeelem" style="font-size: 28px; color: #ddd;">かんたんウェブサイト制作<br>パッケージ</h1>
 
 <style>
 
@@ -384,7 +384,9 @@ style="position:relative;transition: opacity 0.8s 0.6s ease-out, transform 0.8s 
   display:block;
   font-size: 24px;
   color:red;
-  transform:translate(-60%,0);
+  width:5%;
+  white-space:nowrap;
+  overflow:hidden;
   background-color:red;
   margin-bottom: 15px;
   text-align:left;
@@ -464,8 +466,8 @@ style="position:relative;transition: opacity 0.8s 0.6s ease-out, transform 0.8s 
  
 }
  h2.fade-in{
-transition:transform 0.5s ease 0.0s,color 1s ease 0.7s;
-transform:translate(0,0);
+transition:width 0.5s ease 0.0s,color 1s ease 0.7s;
+width:100%;
 color:white !important;
  }
 
