--- a/basecom/templates/basecom/home.html
+++ b/basecom/templates/basecom/home.html
@@ -107,7 +107,7 @@ z-index:100;
 }
 
  </style>
-<div class="rmset pc element fadeelem"
+<div class="rmset pc element nobackfadeelem"
      style="transition:opacity 0.5s ease;
 color:white;font-size:1.2em;white-space:normal;overflow:hidden;"
 >
@@ -328,14 +328,14 @@ style="position:relative;transition: opacity 0.8s 0.6s ease-out, transform 0.8s 
 <div style="position:relative;width:100vw;padding:100px 0px; ">
 <div style="max-width: 1000px; margin: 0 auto;line-height: 1.6; padding: 10px;">
 
- <h1 class="aaaa element fadeelem" style="font-size: 28px; color: #ddd;">かんたんウェブサイト制作<br>パッケージ</h1>
+ <h1 class="h2mess fadeelem" style="font-size: 26px; color: #ddd;">かんたんウェブサイト制作<br>パッケージ</h1>
 
 <style>
 
-.aaaa.fade-in {
+.h2mess.fade-in {
 
   transition:transform 0.5s ease 0.1s;
-  transform:scale(1.2);
+  transform:scale(1.1);
 }
 
 
@@ -485,7 +485,7 @@ color:white !important;
 
 
 
-<div class="fadeelem wrapper-wrpper" style="transform:translateX(-40%);box-sizing:border-box;transition:0.4s transform ease;height:200px;overflow:hidden;">
+<div class="nobackfadeelem wrapper-wrpper" style="transform:translateX(-40%);box-sizing:border-box;transition:0.4s transform ease;height:200px;overflow:hidden;">
 
 <div class="button-wrapper" style=" 
 
