--- a/basecom/templates/basecom/home.html
+++ b/basecom/templates/basecom/home.html
@@ -328,13 +328,18 @@ style="position:relative;transition: opacity 0.8s 0.6s ease-out, transform 0.8s 
 <div style="position:relative;width:100vw;padding:100px 0px; ">
 <div style="max-width: 1000px; margin: 0 auto;line-height: 1.6; padding: 10px;">
 
- <h1 class="h2mess fadeelem" style="font-size: 26px; color: #ddd;">かんたんウェブサイト制作<br>パッケージ</h1>
+ <h1 class="h2mess fadeelem" style="">かんたんウェブサイト制作<br>パッケージ</h1>
 
 <style>
-
+.h2mess{
+font-size: 26px; color: #ddd;
+display:block;
+text-align:center;
+}
 .h2mess.fade-in {
 
-  transition:transform 0.5s ease 0.1s;
+  transition:color 0.5s ease 0.1s,transform 0.5s ease 0.1s;
+  color:white !important;
   transform:scale(1.1);
 }
 
@@ -515,7 +520,7 @@ white-space: nowrap;
 
 
  <div style="position:relative;z-index:10">
- <h1 class="section-title" style="white-space:nowrap;color:white;">Webサイト制作<br>の流れ</h1>
+ <h1  class="h2mess fadeelem" style="white-space:nowrap;">ウェブサイト制作<br>の流れ</h1>
  </div>
    <div class="card-grid">
             <div class="card elem2 fadeelem"
