--- a/basecom/templates/basecom/base.html
+++ b/basecom/templates/basecom/base.html
@@ -3,7 +3,12 @@
 <html lang="ja">
     <head>
      <title id="navTitle" data-title="">〜関西のすみっこで、Web作り〜 rommet {{subtitle}}</title>
-<meta http-equiv="Content-Type" content="text/html;" charset="utf-8">
+
+     <meta name="description" content="関西でウェブサイト制作しております！多方面からの集客を意識したウェブサイト制作をいたします。ご気軽にご相談ください！" />
+     <meta name="keywords" content="大阪,奈良,京都,和歌山,ホームページ,WEBサイト,集客,広告" />
+     <meta name="viewport" content="width=device-width, initial-scale=1" />
+
+    <meta http-equiv="Content-Type" content="text/html;" charset="utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=1">
      <link rel="stylesheet" href="{% static 'css/style.css' %}?p={{fileparam2}}">
      <link rel="stylesheet" href="{% static 'css/base.css' %}?p={{fileparam2}}">
