--- a/basecom/templates/basecom/base.html
+++ b/basecom/templates/basecom/base.html
@@ -50,7 +50,7 @@ html, body {
  <div class="naviwrap">
  <div class="rmnavi"  style="background-color:rgba(1,1,1,0)">
 <div style="background-color:black;width:100vw;padding-right:10px;box-sizing:border-box;">
-<a href="/index.html" style="opacity:1;" data-linkurl="index.html" data-titlename="案内">案内</a>
+<a href="/index.html" style="opacity:1;;" data-linkurl="index.html" data-titlename="案内">案内</a>
 <a href="/loglist.html" style="opacity:1;" data-linkurl="loglist.html"  data-titlename="活動紹介">活動紹介</a>
 <a href="/profile.html" style="opacity:1;" data-linkurl="profile.html"  data-titlename="プロフィール">プロフィール</a>
 <a href="/contact.html" style="opacity:1;" data-linkurl="contact.html"  data-titlename="Contact">Contact</a>
