--- a/static/css/prof.css
+++ b/static/css/prof.css
@@ -28,7 +28,7 @@ div#RomProf2 div#rm_profile0 {
   box-sizing: border-box;
   width: 40vw;
   background-color: rgba(255, 255, 255, 0.7);
-  overflow: scroll;
+  overflow-y: scroll;
   display: inline-block;
   font-family: DotGothic16;
   margin-bottom: 50px;
