--- a/basecom/templates/basecom/profile.html
+++ b/basecom/templates/basecom/profile.html
@@ -25,7 +25,7 @@
   <span data-basedelay="400" class="StrEnphOpa rmlinktitle" >創業 : 2024年</span>
  </div>
  <div>
-  <span data-basedelay="400" class="StrEnphOpa rmlinktitle" >活動地域 :関西近傍</span>
+  <span data-basedelay="400" class="StrEnphOpa rmlinktitle" >活動地域 :関西</span>
  </div>
  <a href="https://www.lancers.jp/profile/yoshihon?ref=header_menu">
   <span data-basedelay="400" class="StrEnphOpa rmlinktitle" >連絡先 : ランサーズ</span>
@@ -41,21 +41,22 @@
   border-radius:5px !important;
   background-color:white !important;
   background-image:url("{% static 'graphic/dots.svg' %}");
+padding:30px 0px;
 }
 </style>
-<div id="keireki">
- <div class="area" style="width:82vw;background-color:white;align-items:flex-start;display:flex;">
+<div id="keireki" style="">
+ <div class="area" style="font-family: DotGothic16;width:82vw;background-color:white;align-items:flex-start;display:flex;">
   <div class="introduce">
     <h1>rom</h1>
     <p><strong>職種:</strong> フルスタックエンジニア</p>
 
-<h2>Introduce</h2>
+<h2  class="StrEnphOpa" >Introduce</h2>
 <p>大学卒業後、フリーランスとして実務経験を積んだフルスタックエンジニア。
 フロントエンドからバックエンドまで一貫して開発でき、特にDjangoとJavaScriptを用いた
 ウェブアプリ開発が得意。ReactやNode.jsを用いたプロジェクトに多数受け持ち、
 最新技術を取り入れながらサービス開発に取り組んでいる。</p>
 
-    <h2>Skill Set</h2>
+    <h2 class="StrEnphOpa" >Skill Set</h2>
     <ul>
         <li><strong>プログラミング言語:</strong> JavaScript(React, Node.js), TypeScript, Python, PHP</li>
         <li><strong>フレームワーク・CMS:</strong> React, Django, WordPress</li>
@@ -64,9 +65,7 @@
         <li><strong>開発手法:</strong> アジャイル開発</li>
     </ul>
 
-<h2>History</h2>
-
-<h3>Independent Development</h3>
+<h2 class="StrEnphOpa" >History</h2>
 
 <h4>ブログ & ポートフォリオサイト</h4>
 <ul>
@@ -77,8 +76,6 @@
     <li>広告なし、リピート機能付き、バックグラウンド再生も可能</li>
 </ul>
 
-<h3>Client Project</h3>
-
 <h4>ショッピングサイト在庫管理ツール</h4>
 <ul>
     <li>Djangoで制作したショッピングサイトの在庫管理ツールです。</li>
@@ -86,7 +83,7 @@
 </ul>
 
 
-    <h2>Education</h2>
+    <h2 class="StrEnphOpa" >Education</h2>
     <p><strong>情報学部</strong> 4年制大学 卒業</p>
     </div>
  </div></div>
